# rust-clippy

./: CHANGELOG.md  Cargo.toml
clippy_lints/: Cargo.toml
clippy_lints/src/: is_digit_simplify.rs  lib.rs  recommend_deriving.rs
tests/ui/: is_digit_simplify.rs  is_digit_simplify.stderr  recommend_deriving.rs
