[package]
name = "clippy_lints"
# begin automatic update
version = "0.0.212"
# end automatic update
authors = [
	"Manish Goregaokar <manishsmail@gmail.com>",
	"Andre Bogus <bogusandre@gmail.com>",
	"Georg Brandl <georg@python.org>",
	"Martin Carton <cartonmartin@gmail.com>"
]
description = "A bunch of helpful lints to avoid common pitfalls in Rust"
repository = "https://github.com/rust-lang/rust-clippy"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["clippy", "lint", "plugin"]
edition = "2018"

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc_ast = { path = "/home/benji/pull-requests/rust/compiler/rustc_ast" }
rustc_ast_pretty = { path = "/home/benji/pull-requests/rust/compiler/rustc_ast_pretty" }
rustc_attr = { path = "/home/benji/pull-requests/rust/compiler/rustc_attr" }
rustc_data_structures = { path = "/home/benji/pull-requests/rust/compiler/rustc_data_structures" }
rustc_driver = { path = "/home/benji/pull-requests/rust/compiler/rustc_driver" }
rustc_errors = { path = "/home/benji/pull-requests/rust/compiler/rustc_errors" }
rustc_hir = { path = "/home/benji/pull-requests/rust/compiler/rustc_hir" }
rustc_hir_pretty = { path = "/home/benji/pull-requests/rust/compiler/rustc_hir_pretty" }
rustc_index = { path = "/home/benji/pull-requests/rust/compiler/rustc_index" }
rustc_infer = { path = "/home/benji/pull-requests/rust/compiler/rustc_infer" }
rustc_lexer = { path = "/home/benji/pull-requests/rust/compiler/rustc_lexer" }
rustc_lint = { path = "/home/benji/pull-requests/rust/compiler/rustc_lint" }
rustc_middle = { path = "/home/benji/pull-requests/rust/compiler/rustc_middle" }
rustc_mir = { path = "/home/benji/pull-requests/rust/compiler/rustc_mir" }
rustc_parse = { path = "/home/benji/pull-requests/rust/compiler/rustc_parse" }
rustc_parse_format = { path = "/home/benji/pull-requests/rust/compiler/rustc_parse_format" }
rustc_session = { path = "/home/benji/pull-requests/rust/compiler/rustc_session" }
rustc_span = { path = "/home/benji/pull-requests/rust/compiler/rustc_span" }
rustc_target = { path = "/home/benji/pull-requests/rust/compiler/rustc_target" }
rustc_trait_selection = { path = "/home/benji/pull-requests/rust/compiler/rustc_trait_selection" }
rustc_typeck = { path = "/home/benji/pull-requests/rust/compiler/rustc_typeck" }

[dependencies]
cargo_metadata = "0.12"
if_chain = "1.0.0"
itertools = "0.9"
pulldown-cmark = { version = "0.8", default-features = false }
quine-mc_cluskey = "0.2.2"
regex-syntax = "0.6"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1", features = ["union"] }
toml = "0.5.3"
unicode-normalization = "0.1"
semver = "0.11"
rustc-semver="1.1.0"
# NOTE: cargo requires serde feat in its url dep
# see <https://github.com/rust-lang/rust/pull/63587#issuecomment-522343864>
url = { version =  "2.1.0", features = ["serde"] }
quote = "1"
syn = { version = "1", features = ["full"] }

[features]
deny-warnings = []
# build clippy with internal lints enabled, off by default
internal-lints = []
